NOJIRA Fixing small skin bugs.  In particular, the ivy theme had repeated backgrounds behind the tab editing dropdown.
git-svn-id: https://source.jasig.org/uPortal/trunk@15570 f5dbab47-78f9-eb45-b975-e544023573eb

--- a/uportal-war/src/main/webapp/media/skins/universality/common/javascript/jquery/themes/ivy/jqueryui.dialog.css
+++ b/uportal-war/src/main/webapp/media/skins/universality/common/javascript/jquery/themes/ivy/jqueryui.dialog.css
@@ -71,18 +71,22 @@
 	margin: 6px;
 }
 
+.jqueryui .ui-dialog-container {
+    padding-bottom: 2px;
+}
+
 /* Dialog handle styles */
 .jqueryui .ui-dialog .ui-resizable-n,
-.jqueryui.ui-dialog .ui-resizable-n { cursor: n-resize; height: 6px; width: 100%; top: 0px; left: 0px; background: transparent; border-top: thin solid #000099; }
+.jqueryui.ui-dialog .ui-resizable-n { cursor: n-resize; height: 6px; width: 100%; top: 0px; left: 0px; background: transparent; border-top: thin solid #D7E7F9; }
 
 .jqueryui .ui-dialog .ui-resizable-s,
-.jqueryui.ui-dialog .ui-resizable-s { cursor: s-resize; height: 8px; width: 100%; bottom: 0px; left: 0px; background: transparent; border-bottom: thin solid #000099; }
+.jqueryui.ui-dialog .ui-resizable-s { cursor: s-resize; height: 8px; width: 100%; bottom: 0px; left: 0px; background: transparent; border-bottom: thin solid #D7E7F9; }
 
 .jqueryui .ui-dialog .ui-resizable-e,
-.jqueryui.ui-dialog .ui-resizable-e { cursor: e-resize; width: 7px; right: 0px; top: 0px; height: 100%; background: transparent; border-right: thin solid #000099; }
+.jqueryui.ui-dialog .ui-resizable-e { cursor: e-resize; width: 7px; right: 0px; top: 0px; height: 100%; background: transparent; border-right: thin solid #D7E7F9; }
 
 .jqueryui .ui-dialog .ui-resizable-w,
-.jqueryui.ui-dialog .ui-resizable-w { cursor: w-resize; width: 7px; left: 0px; top: 0px; height: 100%; background: transparent; border-left: thin solid #000099; }
+.jqueryui.ui-dialog .ui-resizable-w { cursor: w-resize; width: 7px; left: 0px; top: 0px; height: 100%; background: transparent; border-left: thin solid #D7E7F9; }
 
 .jqueryui .ui-dialog .ui-resizable-se,
 .jqueryui.ui-dialog .ui-resizable-se { cursor: se-resize; width: 9px; height: 9px; right: 0px; bottom: 0px; background: transparent; }
