--- a/uportal-war/src/main/webapp/media/skins/universality/common/javascript/jquery/themes/uportal3/jqueryui.dialog.css
+++ b/uportal-war/src/main/webapp/media/skins/universality/common/javascript/jquery/themes/uportal3/jqueryui.dialog.css
@@ -69,6 +69,10 @@
 	margin: 6px;
 }
 
+.jqueryui .ui-dialog-container {
+    padding-bottom: 2px;
+}
+
 /* Dialog handle styles */
 .jqueryui .ui-dialog .ui-resizable-n,
 .jqueryui.ui-dialog .ui-resizable-n { cursor: n-resize; height: 6px; width: 100%; top: 0px; left: 0px; background: transparent; border-top: thin solid #000099; }
